# roPaw

./: .gitignore  README.md  sdkconfig  sdkconfig.ci.esp32c2_xtal26m  sdkconfig.old
main/: CMakeLists.txt  gpios.h  main.c  main.h
main/ctrl/: ir_rec_ctrl.c  ir_rec_ctrl.h
main/drivers/: lcd_drvr.c  lcd_drvr.h  motor_drvr.c  motor_drvr.h
main/misc/: decode_image.c  ir_rec_encoder.c  pretty_effect.c  tjpgdcnf.h
